log/build_2025-04-03_05-43-17/py_pubsub/stderr.log
  File "/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/boyancy_contoler.py", line 20
    def run(self)
                 ^
SyntaxError: expected ':'

